--- a/02_rigid_motions/contents/_three_dimensions.qmd
+++ b/02_rigid_motions/contents/_three_dimensions.qmd
@@ -308,15 +308,15 @@ $$
   c_{\phi+\psi} & -s_{\phi+\psi} & 0 \\
   s_{\phi+\psi} & c_{\phi+\psi} & 0 \\
   0 & 0 & 1
+\end{bmatrix} = 
+\begin{bmatrix}
+  r_{11} & r_{12} & 0 \\ r_{21} & r_{22} & 0 \\ 0 & 0 & 1
 \end{bmatrix}.
 $$
 </center>
 
 Thus, the sum can be determined as $$ \phi + \psi = \arctan_2{ \left( r_{21}, 
-r_{11} \right) } = \arctan_2{ \left( -r_{12}, r_{11} \right) } = 
-\begin{bmatrix}
-  r_{11} & r_{12} & 0 \\ r_{21} & r_{22} & 0 \\ 0 & 0 & 1
-\end{bmatrix}. $$
+r_{11} \right) } = \arctan_2{ \left( -r_{12}, r_{11} \right) }. $$
 
 :::
 :::
